add option to format_plot add  recession indicators to legend, fix corection of short-term job rates

--- a/python/notebooks/02_BUG_paper_appendix_B.ipynb
+++ b/python/notebooks/02_BUG_paper_appendix_B.ipynb
@@ -8,8 +8,8 @@
     "# BUG: Beveridgean Unemployment Gap\n",
     "This series of notebooks demonstrate the python implementation of the \"Beveridgean Unemployment Gap\" by Pascal Michaillat and Emmanuel Saez. The original code was in MATLAB. See [GitHub link](https://github.com/pascalmichaillat/unemployment-gap) for original. \n",
     "\n",
-    "## Appendix\n",
-    "This notebook examines the python implementation of functions in the paper's online appendix. [link](https://ars.els-cdn.com/content/image/1-s2.0-S2666551421000048-mmc1.pdf)"
+    "## Appendix B\n",
+    "This notebook examines the python implementation of functions in the paper's online appendix B. [link](https://ars.els-cdn.com/content/image/1-s2.0-S2666551421000048-mmc1.pdf)"
    ]
   },
   {
@@ -31,7 +31,6 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
-    "from matplotlib.patches import Patch\n",
     "%matplotlib inline\n",
     "plt.style.use('fivethirtyeight')"
    ]
@@ -56,7 +55,7 @@
     "## Read the data\n",
     "Here, we read from the [excel file](https://github.com/pascalmichaillat/unemployment-gap/blob/main/code/data.xlsx) provided with the unemployment-gap matlab package.\n",
     "\n",
-    "The goal of this notebook is to re-create function and figures from the Unemployment Gap paper appendix, so that we can verify we are getting the *same* outputs. (*Sameness* allowing for some small differences between the two language implementations)"
+    "The goal of this notebook is to re-create function and figures from the Unemployment Gap paper appendix, so that we can verify we are getting the *same* outputs. "
    ]
   },
   {
@@ -74,17 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Unemployment rate (percent)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "142d37b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data', header=1, \n",
+    "                   usecols=['Unemployment rate (percent)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "unempl_rate = pd.Series(data=df['Unemployment rate (percent)'].values,\n",
@@ -106,17 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Unemployment level (thousands of persons)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "964b427e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data', header=1, \n",
+    "                   usecols=['Unemployment level (thousands of persons)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "unempl_level = pd.Series(data=df['Unemployment level (thousands of persons)'].values,\n",
@@ -138,17 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Short-term unemployment level (thousands of persons)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "813aa369",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data', header=1, \n",
+    "                   usecols=['Short-term unemployment level (thousands of persons)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "ushort_level = pd.Series(data=df['Short-term unemployment level (thousands of persons)'].values, \n",
@@ -170,17 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Labor force level (thousands of persons)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56759e3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data', header=1, \n",
+    "                   usecols=['Labor force level (thousands of persons)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "labor_level = pd.Series(data=df['Labor force level (thousands of persons)'].values,\n",
@@ -204,8 +167,8 @@
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index()\n",
-    "starts =  pd.to_datetime(df['Peak month'])\n",
     "\n",
+    "starts =  pd.to_datetime(df['Peak month'])\n",
     "ends = pd.to_datetime(df['Trough month'])"
    ]
   },
@@ -233,10 +196,10 @@
    "source": [
     "### Job-finding rate\n",
     "Call the function `bug.compute_job_finding_rate()` with arguments:\n",
-    "  * unemployment level, required\n",
-    "  * short-term unemployment level, required\n",
+    "  * monthly unemployment level, required\n",
+    "  * monthly short-term unemployment level, required\n",
     "  * True/False for whether to convert monthly to quarterly, optional; default is True\n",
-    "  * True/False for whether to adjust the short-term level after 1994, as in Shimer (2012), optional; default is True\n",
+    "  * True/False for whether to adjust the short-term level begining at 1994, as in Shimer (2012), optional; default is True\n",
     "  "
    ]
   },
@@ -267,18 +230,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = find_rate_q[:-1].plot(figsize=(9,7), linewidth=1.5, label='Quarterly (python output)')\n",
+    "ax = find_rate_q[:-1].plot(figsize=(10,7), linewidth=1.5, label='Quarterly (python output)')\n",
     "find_rate_m[:-1].plot(ax=ax, linewidth=1.5, label='Monthly (python output)')\n",
     "\n",
-    "\n",
     "plt.ylim(0, find_rate_q.max()*1.1)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends],)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends],augment_legend=True, legend_loc=1)\n",
     "\n",
     "plt.ylabel('Job-finding rate', fontsize=13)\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "plt.legend(handles=handles, labels=labels,fontsize=12)\n",
     "plt.title('Python Outputs', fontsize=14)"
    ]
   },
@@ -296,43 +254,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5170678",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "find_rate_q =  bug.compute_job_finding_rate(unempl_level, ushort_level, True, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e2d383fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = fig_A1.rename(columns={'Quarterly job-finding rate': 'Quarterly (matlab output)'}).plot(figsize=(9,7), \n",
+    "ax = fig_A1.rename(columns={'Quarterly job-finding rate': 'Quarterly (matlab output)'}).plot(figsize=(10,7), \n",
     "                linewidth=3, color='k', linestyle='dotted',)\n",
     "find_rate_q[:-1].plot(ax=ax, linewidth=1.5, label='Quarterly (python output)')\n",
     "\n",
     "plt.ylim(0, find_rate_q.max()*1.1)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True, legend_loc=1)\n",
     "\n",
     "plt.ylabel('Job-finding rate', fontsize=13)\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "plt.legend(handles=handles, labels=labels,fontsize=12)\n",
-    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b5bf443",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(x=fig_A1, y=find_rate_q[:-1])\n",
     "plt.title('Python vs MATLAB Outputs', fontsize=14)"
    ]
   },
@@ -351,11 +284,11 @@
    "source": [
     "### Job-separation rate\n",
     "Call the function `bug.compute_job_separation_rate()` with arguments:\n",
-    "  * unemployment level, required\n",
-    "  * short-term unemployment level, required\n",
-    "  * labor force level, required\n",
+    "  * monthly unemployment level, required\n",
+    "  * monthly short-term unemployment level, required\n",
+    "  * monthly labor force level, required\n",
     "  * True/False for whether to convert monthly to quarterly, optional; default is True\n",
-    "  * True/False for whether to adjust the short-term level after 1994, as in Shimer (2012), optional; default is True\n"
+    "  * True/False for whether to adjust the short-term level begining at 1994, as in Shimer (2012), optional; default is True\n"
    ]
   },
   {
@@ -385,15 +318,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sep_rate_q[:-1].plot(figsize=(9,7), linewidth=1.5, label='Quarterly (python output)')\n",
+    "ax = sep_rate_q[:-1].plot(figsize=(10,7), linewidth=1.5, label='Quarterly (python output)')\n",
     "sep_rate_m[:-1].plot(ax=ax, linewidth=1.5, label='Monthly (python output)')\n",
     "\n",
     "plt.ylim(0, sep_rate_q.max()*1.1)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "plt.legend(handles=handles, labels=labels,fontsize=12)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True, legend_loc=1)\n",
     "\n",
     "plt.ylabel('Job-separation rate', fontsize=13)\n",
     "plt.title('Python Outputs', fontsize=14)"
@@ -413,54 +342,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de84e0e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sep_rate_q = bug.compute_job_separation_rate(unempl_level, ushort_level, labor_level, True,True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "19b1c2d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = fig_A2.rename(columns={'Quarterly job-separation rate': 'Quarterly (matlab output)'}).plot(figsize=(9,7), \n",
+    "ax = fig_A2.rename(columns={'Quarterly job-separation rate': 'Quarterly (matlab output)'}).plot(figsize=(10,7), \n",
     "                                    linewidth=3, linestyle='dotted', color='k', alpha=.8 )\n",
     "sep_rate_q[:-1].plot(ax=ax, linewidth=1.5, label='Quarterly (python output)')\n",
     "\n",
     "plt.ylim(0, sep_rate_q.max()*1.1)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True, legend_loc=1)\n",
     "\n",
     "plt.ylabel('Job-separation rate', fontsize=13)\n",
-    "plt.title('Python vs MATLAB Outputs', fontsize=14)\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "plt.legend(handles=handles, labels=labels,fontsize=12)"
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5ac2184",
+   "id": "ea03e59e",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27f02bf5",
+   "metadata": {},
    "source": [
-    "plt.scatter(x=fig_A2, y=sep_rate_q[:-1])\n",
-    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
+    "# FIGURE A3 \n",
+    "## Beveridgean unemployment rate in the United States, 1951–2019\n",
+    "Beveridgean unemployment rate vs. actual unemployment"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f19d3e2",
+   "id": "1209c3c1",
    "metadata": {},
    "source": [
-    "#### Re-create figure A3\n",
-    "Beveridgean unemployment rate vs. actual unemployment"
+    "Call the function `bug.compute_beveridgean_unemployment()` with arguments:\n",
+    "  * job finding rate, required\n",
+    "  * job separation rate, required"
    ]
   },
   {
@@ -476,30 +398,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc55e64b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bev_unempl.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e931721a",
    "metadata": {},
    "outputs": [],
    "source": [
     "unempl_q = unempl_rate.resample('Q').mean()/100."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "27f02bf5",
-   "metadata": {},
-   "source": [
-    "# FIGURE A3 \n",
-    "## Beveridgean unemployment rate in the United States, 1951–2019"
    ]
   },
   {
@@ -509,20 +412,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = unempl_q.plot(figsize=(9,7), linewidth=3, color='m', alpha=.8,\n",
+    "ax = unempl_q.plot(figsize=(10,7), linewidth=3, color='m', alpha=.8,\n",
     "                    label='actual unemployemnt', linestyle='dotted')\n",
     "bev_unempl.plot(ax=ax, linewidth=1.5, label='beveridgean (python output)')\n",
     "\n",
     "plt.ylim(0, unempl_q.max()*1.1)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True, legend_loc=4)\n",
     "\n",
     "plt.ylabel('Unemployment rate', fontsize=13)\n",
-    "plt.title('Beveridgean vs Actual (quarterly)', fontsize=14)\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "plt.legend(handles=handles, labels=labels,fontsize=12, loc=4)"
+    "plt.title('Beveridgean vs Actual (quarterly)', fontsize=14)\n"
    ]
   },
   {
@@ -544,30 +442,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = fig_A3.rename(columns={'Beveridgean unemployment rate': 'Beveridgean (matlab output)'}).plot(figsize=(9,7), \n",
+    "ax = fig_A3.rename(columns={'Beveridgean unemployment rate': 'Beveridgean (matlab output)'}).plot(figsize=(10,7), \n",
     "                linewidth=3, color='k', linestyle='dotted')\n",
     "bev_unempl[:-1].plot(ax=ax, linewidth=1.5, label='Beveridgean (python output)')\n",
     "\n",
     "plt.ylim(0, unempl_q.max()*1.1)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True, legend_loc=4)\n",
     "\n",
     "plt.ylabel('unemployement rate', fontsize=13)\n",
-    "plt.title('Python vs MATLAB Outputs', fontsize=14)\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "plt.legend(handles=handles, labels=labels,fontsize=12, loc=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31d8a757",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(x=fig_A3, y=bev_unempl[:-1])\n",
     "plt.title('Python vs MATLAB Outputs', fontsize=14)"
    ]
   },
@@ -607,37 +489,16 @@
    "outputs": [],
    "source": [
     "\n",
-    "ax = bev_unempl_m[:-1].plot(linewidth=3, figsize=(9,7),label='beveridgean (python output)')\n",
-    "ax = unempl_m[1:].plot( ax=ax, linewidth=2, color='m', \n",
+    "ax = bev_unempl_m[:-1].plot(linewidth=2, figsize=(10,7),label='beveridgean (python output)')\n",
+    "ax = unempl_m[1:].plot( ax=ax, linewidth=1, color='m', \n",
     "                     label='actual unemployemnt')\n",
     "\n",
     "plt.ylim(0, unempl_m.max()*1.1)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends],augment_legend=True, legend_loc=4)\n",
     "\n",
     "plt.ylabel('Unemployment rate', fontsize=13)\n",
-    "plt.title('Python Output vs Actual (monthly)', fontsize=14)\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "plt.legend(handles=handles, labels=labels,fontsize=12, loc=4)"
+    "plt.title('Python Output vs Actual (monthly)', fontsize=14)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5a567e2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1e44deb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
