clean up notebook 1 a bit

--- a/python/notebooks/01_BUG_paper_section_2.ipynb
+++ b/python/notebooks/01_BUG_paper_section_2.ipynb
@@ -76,7 +76,6 @@
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
     "starts =  pd.to_datetime(df['Peak month'])\n",
-    "\n",
     "ends = pd.to_datetime(df['Trough month'])"
    ]
   },
@@ -96,16 +95,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Unemployment rate (percent)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10c4523e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           header=1, usecols=['Unemployment rate (percent)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "unempl_rate = pd.Series(data=df['Unemployment rate (percent)'].values,\n",
@@ -137,16 +127,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Vacancy rate (thousands)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94fe9de1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           header=1, usecols=['Vacancy rate (thousands)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "vac_rate_proxy = pd.Series(data=df['Vacancy rate (thousands)'].values,\n",
@@ -169,16 +150,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Labor force level (thousands of persons)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2887995",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           header=1, usecols=['Labor force level (thousands of persons)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "labor_level = pd.Series(data=df['Labor force level (thousands of persons)'].values,\n",
@@ -201,16 +173,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Vacancy level (thousands)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "172bfe27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           header=1, usecols=['Vacancy level (thousands)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "vacancy_level = pd.Series(data=df['Vacancy level (thousands)'].values,\n",
@@ -241,7 +204,7 @@
    "id": "32cb43af",
    "metadata": {},
    "source": [
-    "### Figure 1A"
+    "# Figure 1A"
    ]
   },
   {
@@ -251,13 +214,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = unempl_rate.plot(figsize=(9,6),linewidth=2, color='purple',)\n",
+    "ax = unempl_rate.plot(figsize=(9,6),linewidth=1.5, color='purple',)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], draw_legend=True)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True)\n",
     "plt.ylim(0, unempl_rate.max()*1.1)\n",
     "\n",
     "plt.ylabel('Unemployment Rate', fontsize=12)\n",
-    "plt.title('Unemployment Rate', fontsize=14)"
+    "plt.title('Unemployment Rate (Monthly)', fontsize=14)"
    ]
   },
   {
@@ -265,7 +228,7 @@
    "id": "d588b104",
    "metadata": {},
    "source": [
-    "### Figure 1B"
+    "# Figure 1B"
    ]
   },
   {
@@ -275,22 +238,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = vacancy_rate_splice.plot(figsize=(9,6),linewidth=2, color='purple',)\n",
+    "ax = vacancy_rate_splice.plot(figsize=(9,6),linewidth=1.5, color='purple',label='vacancy_rate')\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], draw_legend=True)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True)\n",
     "plt.ylim(0, vacancy_rate_splice.max()*1.1)\n",
     "\n",
     "plt.ylabel('Vacancy Rate', fontsize=12)\n",
-    "plt.title('Vacancy Rate', fontsize=14)\n"
+    "plt.title('Vacancy Rate (Monthly)', fontsize=14)\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5c2cd56a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19870b26",
    "metadata": {},
-   "source": [
-    "### Figure 1C-1F"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -299,13 +262,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize = (8,8))\n",
+    "fig = plt.figure(figsize = (7,7))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "ax.plot(np.log(unempl_rate/100), np.log(vacancy_rate_splice/100), linewidth=1)\n",
     "\n",
     "bug.format_plot(ax, xgrid=False)\n",
-    "plt.xlim(-3.8, -2.1)\n",
-    "plt.ylim(-4.3, -2.95)\n",
+    "\n",
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
     "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
     "plt.title('Beveridge Curve (monthly)', fontsize=14)"
@@ -329,26 +291,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize = (8,8))\n",
+    "fig = plt.figure(figsize = (7,7))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "\n",
     "ax.plot(log_unempl_rate_q, log_vacancy_rate_q, linewidth=1,)\n",
     "bug.format_plot(ax, xgrid=False)\n",
     "\n",
-    "plt.xlim(-3.8, -2.1)\n",
-    "plt.ylim(-4.3, -2.95)\n",
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
     "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
     "plt.title('Beveridge Curve (quarterly)', fontsize=14)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b435ca96",
+   "cell_type": "markdown",
+   "id": "5c2cd56a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Figure 1C-1F"
+   ]
   },
   {
    "cell_type": "code",
@@ -358,24 +318,8 @@
    "outputs": [],
    "source": [
     "bug.plot_beveridge_curve_segments(log_unempl_rate_q, log_vacancy_rate_q, \n",
-    "                                  [0, 76, 156, 236, 276])"
+    "                                  bkps=[0, 76, 156, 236, 276])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "515c70d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56e55032",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
