clean up notebook 3 a bit, add useage comments in markdown

--- a/python/notebooks/03_BUG_paper_appendix_C-D.ipynb
+++ b/python/notebooks/03_BUG_paper_appendix_C-D.ipynb
@@ -32,7 +32,6 @@
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.patches import Patch\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('fivethirtyeight')"
    ]
@@ -70,7 +69,6 @@
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
     "starts =  pd.to_datetime(df['Peak month'])\n",
-    "\n",
     "ends = pd.to_datetime(df['Trough month'])"
    ]
   },
@@ -86,7 +84,7 @@
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "unempl_rate = pd.Series(data=df['Unemployment rate (percent)'].values,\n",
-    "                       index=dates, name='unempl_rate')\n"
+    "                       index=dates, name='unempl_rate')"
    ]
   },
   {
@@ -152,6 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create the quarterly rates and log of quarterly rates\n",
     "u_q = unempl_rate.resample('Q').mean()/100\n",
     "u_q = u_q.loc[:u_q.last_valid_index()]\n",
     "log_u_q = np.log(u_q)\n",
@@ -166,7 +165,11 @@
    "id": "47c6dbcb",
    "metadata": {},
    "source": [
-    "### Matching elasticity"
+    "### Matching elasticity\n",
+    "Call the function `bug.compute_beveridge_elasticity()` with arguments:\n",
+    "  * log of unemployment rate, required\n",
+    "  * log of vacancy rate, required\n",
+    "  "
    ]
   },
   {
@@ -176,18 +179,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bev = bug.compute_beveridge_elasticity(log_u_q, log_v_q, )\n",
-    "bev_e_q = bev[0].E.resample('Q').mean()"
+    "bev = bug.compute_beveridge_elasticity(log_u_q, log_v_q, )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1052a9c4",
+   "metadata": {},
+   "source": [
+    "The function `bug.compute_beveridge_elasticity()` outputs 2 things:\n",
+    "  * The estimated Beveridge elasticity and 95% confidence intervals for that estimate, in the form of a pandas DataFrame\n",
+    "  * The estimated linear regression coefficients from the piece-wise linear fit of log unemployment vs log vacancy\n",
+    "  \n",
+    "For next computing the matching elasticity, we just need the Beveridge elasticity\n",
+    "\n",
+    "\n",
+    "Call the function `bug.compute_matching_elasticity()` with arguments:\n",
+    "  * unemployment rate, required\n",
+    "  * Beveridge elasticity, required\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a9c6cea",
+   "id": "7ca13b25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "eta = bug.compute_matching_elasticity(u_q, bev_e_q)"
+    "eta = bug.compute_matching_elasticity(u_q, bev[0].E)"
    ]
   },
   {
@@ -206,13 +225,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax= eta.plot(color='blueviolet', linewidth=2, figsize=(9, 6))\n",
+    "ax = eta.plot(color='blueviolet', linewidth=2, figsize=(9, 6), label='matching_elasticity')\n",
     "\n",
     "plt.ylim(0, .6)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], draw_legend=True)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True)\n",
     "\n",
     "plt.ylabel('Matching Elasticity', fontsize=12)\n",
-    "plt.title('Matching Elasticity', fontsize=14)\n"
+    "plt.title('Matching Elasticity', fontsize=14)"
    ]
   },
   {
@@ -220,17 +239,18 @@
    "id": "b675ecc5",
    "metadata": {},
    "source": [
-    "### Endogenous Bev elasticity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da3eebe7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "theta = v_q/u_q"
+    "### Endogenous Bev elasticity\n",
+    "Call the function `bug.compute_efficient_unemployment()` with arguments:\n",
+    "  * unemployment rate, required\n",
+    "  * vacancy rate, required\n",
+    "  * Beveridge elasticity, required\n",
+    "  * Social value of nonwork (zeta); optional, default zeta=0.26\n",
+    "  * Recruiting cost (kappa); optional, default kappa=0.92\n",
+    "  \n",
+    "Call the function `bug.compute_separation_efficacy()` with arguments:\n",
+    "  * unemployment rate, required\n",
+    "  * Matching elasticity, required\n",
+    "  * Labor market tightness (theta)\n"
    ]
   },
   {
@@ -240,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ustar = bug.compute_efficient_unemployment(u_q,v_q, bev_e_q )"
+    "ustar = bug.compute_efficient_unemployment(u_q, v_q, bev[0].E)"
    ]
   },
   {
@@ -250,7 +270,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamomega = bug.compute_separation_efficacy(u_q,eta,theta)"
+    "theta = v_q/u_q\n",
+    "lamomega = bug.compute_separation_efficacy(u_q, eta, theta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e5a50a4",
+   "metadata": {},
+   "source": [
+    "Call the function `bug.compute_endogenous_efficiency()` with arguments:\n",
+    "  * Matching elasticity, required\n",
+    "  * separation-efficiency ratio (lambda/omega), required\n",
+    "  * Social value of nonwork (zeta); optional, default zeta=0.26\n",
+    "  * Recruiting cost (kappa); optional, default kappa=0.92"
    ]
   },
   {
@@ -260,9 +293,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = 0.26 # social value of non-work\n",
-    "c = 0.92 # recruiting cost\n",
-    "ustar_endo, theta_star = bug.compute_endogenous_efficiency(eta, lamomega, z, c)"
+    "# here we are illustrating how to use the optional arguments \n",
+    "# (even though we are just using default values)\n",
+    "\n",
+    "ustar_endo, theta_star = bug.compute_endogenous_efficiency(eta, lamomega, zeta=.26, kappa=.92)"
    ]
   },
   {
@@ -284,17 +318,11 @@
     "ax= ustar.plot(color='magenta', linewidth=2, figsize=(9, 6), label=\"Exogenous\")\n",
     "ustar_endo.plot(color='darkorange', linewidth=2,  label=\"Endogenous\")\n",
     "\n",
-    "\n",
     "plt.ylim(0, .06)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends])\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True)\n",
     "\n",
     "plt.ylabel('Efficient unemployment rate', fontsize=12)\n",
-    "plt.title('Beveridge Elasticity', fontsize=14)\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "ax.legend(handles=handles, labels=labels, loc=3)"
+    "plt.title('Beveridge Elasticity', fontsize=14)"
    ]
   },
   {
@@ -345,13 +373,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14dc6034",
+   "metadata": {},
+   "source": [
+    "Call the function `bug.compute_job_finding_rate()` with arguments:\n",
+    "  * monthly unemployment level, required\n",
+    "  * monthly short-term unemployment level, required\n",
+    "  * True/False for whether to convert monthly to quarterly, optional; default is True\n",
+    "  * True/False for whether to adjust the short-term level begining at 1994, as in Shimer (2012), optional; default is True\n",
+    "  \n",
+    "Call the function `bug.compute_matching_efficacy()` with arguments:\n",
+    "  * job-finding rate, required\n",
+    "  * Labor-market tightness (theta), required\n",
+    "  * Matching elasticity (eta), required"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "90275e73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = bug.compute_job_finding_rate(unempl_level, ushort_level, True, True)"
+    "f = bug.compute_job_finding_rate(unempl_level, ushort_level, True,)"
    ]
   },
   {
@@ -380,13 +425,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax= omega.plot(color='darkred', linewidth=2, figsize=(9, 6), )\n",
+    "ax= omega.plot(color='darkred', linewidth=2, figsize=(9, 6), label='match_efficacy')\n",
     "\n",
     "plt.ylim(0, 4)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], draw_legend=True)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True)\n",
     "\n",
     "plt.ylabel('Matching Efficacy', fontsize=12)\n",
     "plt.title('Matching Efficacy', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "047a0036",
+   "metadata": {},
+   "source": [
+    "### Job-separation rate\n",
+    "Call the function `bug.compute_job_separation_rate()` with arguments:\n",
+    "  * monthly unemployment level, required\n",
+    "  * monthly short-term unemployment level, required\n",
+    "  * monthly labor force level, required\n",
+    "  * True/False for whether to convert monthly to quarterly, optional; default is True\n",
+    "  * True/False for whether to adjust the short-term level begining at 1994, as in Shimer (2012), optional; default is True"
    ]
   },
   {
@@ -411,18 +470,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamb = bug.compute_job_separation_rate(unempl_level, ushort_level, labor_level, True, True)"
+    "lamb = bug.compute_job_separation_rate(unempl_level, ushort_level, labor_level, True,)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b23b3ffb",
+   "cell_type": "markdown",
+   "id": "f0a6e5bb",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#% Calibrate discount rate as discussed in online appendix D\n",
-    "r = 0.012"
+    "Call the function `bug.compute_hosios_efficiency()` with arguments:\n",
+    "  * Matching elasticity (eta), required\n",
+    "  * job separation rate (lambda), required\n",
+    "  * Matching efficacy (omega), required\n",
+    "  * An initial value for the efficient unemployment rate (u0), required\n",
+    "  * discount rate; optional, default is r=0.012\n",
+    "  * Social value of nonwork (zeta); optional, default zeta=0.26\n",
+    "  * Recruiting cost (kappa); optional, default kappa=0.92  \n"
    ]
   },
   {
@@ -432,7 +495,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u_hosios, th_hosios = bug.compute_hosios_efficiency(eta, lamb, omega, r=r, u0=u_q[0])"
+    "#% Calibrate discount rate as discussed in online appendix D\n",
+    "r = 0.012\n",
+    "u_hosios, th_hosios = bug.compute_hosios_efficiency(eta, lamb, omega, u0=u_q[0], r=r)"
    ]
   },
   {
@@ -455,15 +520,10 @@
     "ustar_endo.plot(color='magenta', linewidth=2,  label=\"Endogenous\")\n",
     "\n",
     "plt.ylim(0, .06)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends],)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True)\n",
     "\n",
     "plt.ylabel('Efficient unemployment rate', fontsize=12)\n",
-    "plt.title('Efficient unemployment rate', fontsize=14)\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "ax.legend(handles=handles, labels=labels, loc=3)"
+    "plt.title('Efficient unemployment rate', fontsize=14)"
    ]
   },
   {
