--- a/python/notebooks/04_BUG_paper_section_5.ipynb
+++ b/python/notebooks/04_BUG_paper_section_5.ipynb
@@ -40,7 +40,6 @@
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.patches import Patch\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('fivethirtyeight')"
    ]
@@ -86,7 +85,6 @@
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
     "starts =  pd.to_datetime(df['Peak month'])\n",
-    "\n",
     "ends = pd.to_datetime(df['Trough month'])"
    ]
   },
@@ -106,16 +104,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Unemployment rate (percent)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10c4523e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           header=1, usecols=['Unemployment rate (percent)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "unempl_rate = pd.Series(data=df['Unemployment rate (percent)'].values,\n",
@@ -147,16 +136,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Vacancy rate (thousands)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94fe9de1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           header=1, usecols=['Vacancy rate (thousands)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "vac_rate_proxy = pd.Series(data=df['Vacancy rate (thousands)'].values,\n",
@@ -179,16 +159,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Labor force level (thousands of persons)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2887995",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           header=1, usecols=['Labor force level (thousands of persons)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "labor_level = pd.Series(data=df['Labor force level (thousands of persons)'].values,\n",
@@ -211,16 +182,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Monthly data',\n",
-    "                           header=1, usecols=['Vacancy level (thousands)', 'Year', 'Month'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "172bfe27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           header=1, usecols=['Vacancy level (thousands)', 'Year', 'Month'],)\n",
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "vacancy_level = pd.Series(data=df['Vacancy level (thousands)'].values,\n",
@@ -270,6 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create the quarterly rates series\n",
     "u_q = unempl_rate.resample('Q').mean()/100\n",
     "u_q = u_q.loc[:u_q.last_valid_index()]\n",
     "\n",
@@ -284,6 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create the quarterly rates series\n",
     "v_q = vacancy_rate_splice.resample('Q').mean()/100\n",
     "v_q = v_q.loc[:v_q.last_valid_index()]\n",
     "\n",
@@ -298,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize = (8,8))\n",
+    "fig = plt.figure(figsize = (7,7))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "ax.plot(log_u_q, log_v_q, linewidth=1,)\n",
     "\n",
@@ -308,20 +272,6 @@
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
     "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
     "plt.title('Beveridge Curve (quarterly)', fontsize=14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26a68993",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from the matlab file getBreakDate.m:\n",
-    "mat_breaks = [0, 41, 84, 153, 194, 235, 276]\n",
-    "\n",
-    "# from getBeveridgeElasticity.m:\n",
-    "mat_coeffs = [0.8437, 1.0182, 0.8376, 0.9390, 0.9985, 0.8364]"
    ]
   },
   {
@@ -347,12 +297,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89f86812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from the matlab file getBreakDate.m:\n",
+    "mat_breaks = [0, 41, 84, 153, 194, 235, 276]\n",
+    "\n",
+    "# from getBeveridgeElasticity.m:\n",
+    "mat_coeffs = [0.8437, 1.0182, 0.8376, 0.9390, 0.9985, 0.8364]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f1fed988",
    "metadata": {},
    "source": [
     "### Get breakpoints\n",
-    "This functions assumes the input series are the **log series** of u and v\n",
+    "Our python function assumes the input series are the **log series** of u and v\n",
     "\n",
     "Returns: the estimated breakpoints and the estimated beveridge elasticity (the coeffs of the fitted linear model)"
    ]
@@ -449,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bev_e, _ = bug.compute_beveridge_elasticity(log_u_q, log_v_q)"
+    "bev_e, python_coeffs = bug.compute_beveridge_elasticity(log_u_q, log_v_q)"
    ]
   },
   {
@@ -468,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bug.plot_beveridge_elasticity_series(bev_e, recession_dates=[starts, ends],)\n",
+    "bug.plot_beveridge_elasticity_series(bev_e, recession_dates=[starts, ends],draw_legend=True)\n",
     "plt.ylim(0, 1.5)"
    ]
   },
@@ -495,10 +459,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(bev_e['E'].unique(), mat_coeffs, marker='x')\n",
-    "plt.title(\"python vs matlab estimated elasticity coeffs\")\n",
-    "plt.xlim(.8,1.05)\n",
-    "plt.ylim(.8,1.05)"
+    "[round(c[0],4) for c in python_coeffs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "394a9c16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_coeffs"
    ]
   },
   {
@@ -509,7 +480,9 @@
     "### Standard errors of the Elasticity estimate\n",
     "Here is where our estimates using python will diverge from the results found with the matlab implementation. Why? Because of the choice of robust covaraince estimator.\n",
     "\n",
-    "We can find the exact same breakpoints as the matlab method, and from there we can fit a regression model to each sub-sequence. We get the same fitted coefficients, why don't we get the same standard errors? Any regression model requires an assumption on the natrue of the errors. For time series like this, we want to allow for heteroskedasticy as well as autocorrelation in the error terms. The type of covaraince estimator we want is then a 'HAC.'\n",
+    "We can find the exact same breakpoints as the matlab method, and from there we can fit a regression model to each sub-sequence. **We get the same fitted coefficients, why don't we get the same standard errors?** \n",
+    "\n",
+    "Any regression model requires an assumption on the natrue of the errors. For time series like this, we want to allow for heteroskedasticy as well as autocorrelation in the error terms. The type of covaraince estimator we want is then a 'HAC.'\n",
     "\n",
     "Bai & Perron suggest using the HAC estimator from Andrews (1991), and this is the approach implementd in the matlab code. This was not the main focus of the work by M&S, so if they settled on using the B&P method for finding the breaks, then they simply also incorporated the B&P suggested defaults, which included Andrews HAC.\n",
     "\n"
@@ -522,7 +495,9 @@
    "source": [
     "Like M&S, we want to be judicious in leveraging exisitng methods for parameter estimation. In the package we use for OLS regression, the robust HAC method that is implemented is the Newey & West (1994) estimator. The Andrews HAC is not available. \n",
     "\n",
-    "See [Cheung and Lai (1997)](https://people.ucsc.edu/~cheung/WorkingPapers/BandWidthSelectionPowerPPTest_ET1997.pdf) for nice discussion of N-W vs Andrews HAC. (Different kernels, different bandwidth estimation, etc.)"
+    "See [Cheung and Lai (1997)](https://people.ucsc.edu/~cheung/WorkingPapers/BandWidthSelectionPowerPPTest_ET1997.pdf) for nice discussion of N-W vs Andrews HAC. \n",
+    "\n",
+    "(Different kernels, different bandwidth estimation, etc.)"
    ]
   },
   {
@@ -533,7 +508,7 @@
    "outputs": [],
    "source": [
     "# from getBeveridgeElasticity.m:\n",
-    "# se = [0.066707, 0.068795, 0.11244, 0.14772, 0.057224, 0.056694];"
+    "mat_se = [0.066707, 0.068795, 0.11244, 0.14772, 0.057224, 0.056694];"
    ]
   },
   {
@@ -552,7 +527,8 @@
    "id": "d3b81901",
    "metadata": {},
    "source": [
-    "### Confidence intervals of break points"
+    "### Confidence intervals of break points\n",
+    "Alas, this is one aspect that we have not been able to port into our python code. We hope to work on this in the future."
    ]
   },
   {
@@ -573,13 +549,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e89d8cf",
+   "metadata": {},
+   "source": [
+    "Call the function `bug.compute_efficient_tightness()` with arguments:\n",
+    "  * Beveridge elasticity, required\n",
+    "  * value of non-work (zeta), optional; default is zeta=0.26\n",
+    "  * recruitment cost (kappa), optional; default is kappa=0.92\n",
+    "  \n",
+    "Theta is labor market tightness"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5d4e5e17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "eff_mar_tightness = bug.compute_efficient_tightness(bev_e['E'], zeta=0.26, kappa=0.92)\n",
+    "eff_mar_tightness = bug.compute_efficient_tightness(bev_e['E'])\n",
     "theta = v_q/u_q"
    ]
   },
@@ -599,31 +588,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = theta.plot(color='navy', linewidth=2, figsize=(9, 6), label='Actual')\n",
+    "ax = theta.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
     "eff_mar_tightness.plot(ax=ax,color='magenta', linewidth=2,label='Efficient')\n",
     "\n",
     "plt.fill_between(theta.index, eff_mar_tightness, np.max((theta, eff_mar_tightness), axis=0),color='magenta', alpha=.2)\n",
     "plt.fill_between(theta.index, eff_mar_tightness, np.min((theta, eff_mar_tightness), axis=0),color='navy', alpha=.2)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=1)\n",
     "plt.ylim(0, 1.6)\n",
     "plt.ylabel('Labor Market Tightness', fontsize=12)\n",
-    "plt.title('Labor Market Tightness', fontsize=14)\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "ax.legend(handles=handles, labels=labels, loc=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34075dd9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=0.26, kappa=0.92)"
+    "plt.title('Labor Market Tightness', fontsize=14)\n"
    ]
   },
   {
@@ -638,36 +612,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81f65cdd",
+   "id": "34075dd9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = u_q.plot(color='navy', linewidth=2, figsize=(9, 6), label='Actual')\n",
-    "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient')\n",
-    "\n",
-    "plt.fill_between(theta.index, eff_unempl, np.min((u_q, eff_unempl), axis=0),color='magenta', alpha=.2)\n",
-    "plt.fill_between(theta.index, eff_unempl, np.max((u_q, eff_unempl), axis=0),color='navy', alpha=.2)\n",
-    "\n",
-    "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True)\n",
-    "plt.ylim(0, .12)\n",
-    "\n",
-    "plt.ylabel('Unemployment', fontsize=12)\n",
-    "plt.title('Unemployment', fontsize=14)\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "ax.legend(handles=handles, labels=labels, loc=4)"
+    "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=0.26, kappa=0.92)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fd4cd8f",
+   "id": "81f65cdd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "unepl_gap = bug.compute_unemployment_gap(u_q, v_q, bev_e['E'], zeta=0.26, kappa=0.92)"
+    "ax = u_q.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
+    "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient')\n",
+    "\n",
+    "plt.fill_between(theta.index, eff_unempl, np.min((u_q, eff_unempl), axis=0),color='magenta', alpha=.2)\n",
+    "plt.fill_between(theta.index, eff_unempl, np.max((u_q, eff_unempl), axis=0),color='navy', alpha=.2)\n",
+    "\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "plt.ylim(0, .12)\n",
+    "\n",
+    "plt.ylabel('Unemployment', fontsize=12)\n",
+    "plt.title('Unemployment', fontsize=14)"
    ]
   },
   {
@@ -682,25 +651,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2fd4cd8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unepl_gap = bug.compute_unemployment_gap(u_q, v_q, bev_e['E'], zeta=0.26, kappa=0.92)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "59cf112e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = unepl_gap.plot(color='navy', linewidth=2, figsize=(9, 6), label='unemployment gap')\n",
+    "ax = unepl_gap.plot(color='navy', linewidth=2, figsize=(10, 7), label='unemployment gap')\n",
     "plt.axhline(y=0, color='magenta', linewidth=2,)\n",
+    "\n",
     "plt.fill_between(unepl_gap.index, 0, [min(0,g) for g in unepl_gap],color='magenta', alpha=.2)\n",
     "plt.fill_between(unepl_gap.index, 0, [max(0,g) for g in unepl_gap],color='navy', alpha=.2)\n",
     "\n",
-    "\n",
     "plt.ylim(-.02, .08)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
     "plt.ylabel('Unemployment Gap', fontsize=12)\n",
-    "plt.title('Unemployment Gap', fontsize=14)\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "ax.legend(handles=handles, labels=labels, loc=4)"
+    "plt.title('Unemployment Gap', fontsize=14)"
    ]
   },
   {
@@ -780,37 +754,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = eff_unempl.plot(figsize=(9, 6),color='magenta', linewidth=2,label='Efficient')\n",
+    "ax = eff_unempl.plot(figsize=(10, 7),color='magenta', linewidth=2,label='Efficient')\n",
     "nairu['NAIRU (percent)'].plot(color='darkorange', linewidth=2,label='NAIRU')\n",
     "natural['Natural rate of unemployment (percent)'].plot(color='darkgreen', linestyle='dashed',linewidth=2,label='Natural')\n",
     "trend['Trend of unemployment rate (percent)'].plot(color='k', linestyle='dotted',linewidth=2.5,label='Trend')\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
     "\n",
     "plt.ylim(0, .1)\n",
-    "\n",
-    "plt.title('Alternate Unemployment Rates', fontsize=14)\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "handles.append(Patch(facecolor='grey',))\n",
-    "labels.append(\"Recession indicator\")\n",
-    "ax.legend(handles=handles, labels=labels, loc=4)"
+    "plt.title('Alternate Unemployment Rates', fontsize=14)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21def8da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a0e7513",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
