--- a/python/notebooks/05_BUG_paper_sec5-7_appE.ipynb
+++ b/python/notebooks/05_BUG_paper_sec5-7_appE.ipynb
@@ -48,30 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b021670c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# social value of non-work\n",
-    "zeta= 0.26\n",
-    "zeta_range = (0.03, 0.49)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5bbc271",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# recruiting costs\n",
-    "kappa=0.92\n",
-    "kappa_range = (0.61, 1.23)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3438404d",
    "metadata": {},
@@ -89,10 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',\n",
-    "                           header=1, usecols=['Peak month', 'Trough month'],) \n",
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
+    "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
     "starts =  pd.to_datetime(df['Peak month'])\n",
-    "\n",
     "ends = pd.to_datetime(df['Trough month'])"
    ]
   },
@@ -108,7 +83,7 @@
     "# set the index \n",
     "dates = pd.PeriodIndex(pd.to_datetime(dict(year=df.Year, month=df.Month, day=15)).dt.to_period('m') ) \n",
     "unempl_rate = pd.Series(data=df['Unemployment rate (percent)'].values,\n",
-    "                       index=dates, name='unempl_rate')\n"
+    "                       index=dates, name='unempl_rate')"
    ]
   },
   {
@@ -197,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bev_e = bug.compute_beveridge_elasticity(unempl_rate, vacancy_rate_splice, )"
+    "bev_e, _ = bug.compute_beveridge_elasticity(np.log(u_q), np.log(v_q) )"
    ]
   },
   {
@@ -217,23 +192,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax= bev_e['E'].plot(color='blueviolet', linewidth=2, figsize=(9, 6))\n",
-    "bev_e[['LB', 'UB']].plot(color='blueviolet', linewidth=2,linestyle='dotted', ax=ax, legend=False)\n",
-    "plt.fill_between(bev_e.index, bev_e['UB'], bev_e['LB'], color='blueviolet', alpha=.2)\n",
-    "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
-    "plt.ylim(0, 1.5)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
-    "plt.ylabel('Beveridge Elasticity', fontsize=12)\n",
-    "plt.title('Beveridge Elasticity', fontsize=14)"
+    "bug.plot_beveridge_elasticity_series(bev_e, recession_dates=[starts, ends],draw_legend=True)\n",
+    "plt.ylim(0, 1.5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c15052b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -241,6 +210,30 @@
    "metadata": {},
    "source": [
     "### Effect of Bev elasticity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a8233c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# social value of non-work\n",
+    "zeta= 0.26\n",
+    "zeta_range = (0.03, 0.49)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fac7d54c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# recruiting costs\n",
+    "kappa=0.92\n",
+    "kappa_range = (0.61, 1.23)"
    ]
   },
   {
@@ -256,39 +249,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4a62dfa",
+   "metadata": {},
+   "source": [
+    "# FIGURE 8A\n",
+    "## Beveridge elasticity 95% CI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2be442fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = u_q.plot(color='navy', linewidth=2, figsize=(9, 6), label='Actual')\n",
+    "ax = u_q.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
     "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient')\n",
     "eff_unempl_ub.plot(ax=ax,color='magenta', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "eff_unempl_lb.plot(ax=ax,color='magenta',linestyle='dotted',  linewidth=2, label='_nolegend_')\n",
     "plt.fill_between(eff_unempl_lb.index, eff_unempl_lb, eff_unempl_ub, color='magenta', alpha=.2)\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, .12)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Unemployment rate', fontsize=12)\n",
     "plt.title('Unemployment', fontsize=14)\n",
     "plt.suptitle('With Beveridge elasticity 95% CI')"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6952cad8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "1166d0e1",
    "metadata": {},
    "source": [
+    "# FIGURE 8B\n",
     "### Effect of zeta Value of non-work"
    ]
   },
@@ -301,7 +304,7 @@
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa)\n",
     "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[1], kappa=kappa)\n",
-    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[0], kappa=kappa)\n"
+    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[0], kappa=kappa)"
    ]
   },
   {
@@ -311,23 +314,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = u_q.plot(color='navy', linewidth=2, figsize=(9, 6), label='Actual')\n",
+    "ax = u_q.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
     "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient')\n",
     "eff_unempl_ub.plot(ax=ax,color='magenta', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "eff_unempl_lb.plot(ax=ax,color='magenta',linestyle='dotted',  linewidth=2, label='_nolegend_')\n",
     "plt.fill_between(eff_unempl_lb.index, eff_unempl_lb, eff_unempl_ub, color='magenta', alpha=.2)\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, .12)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Unemployment rate', fontsize=12)\n",
     "plt.title('Unemployment', fontsize=14)\n",
     "plt.suptitle('With zeta value non-work in [0.03, 0.49]')"
@@ -346,6 +341,7 @@
    "id": "d7bf024d",
    "metadata": {},
    "source": [
+    "# FIGURE 8C\n",
     "### Effect of kappa recruiting cost"
    ]
   },
@@ -358,7 +354,7 @@
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa)\n",
     "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa_range[1])\n",
-    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa_range[0])\n"
+    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa_range[0])"
    ]
   },
   {
@@ -368,23 +364,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = u_q.plot(color='navy', linewidth=2, figsize=(9, 6), label='Actual')\n",
+    "ax = u_q.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
     "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient')\n",
     "eff_unempl_ub.plot(ax=ax,color='magenta', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "eff_unempl_lb.plot(ax=ax,color='magenta',linestyle='dotted',  linewidth=2, label='_nolegend_')\n",
     "plt.fill_between(eff_unempl_lb.index, eff_unempl_lb, eff_unempl_ub, color='magenta', alpha=.2)\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, .12)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Unemployment rate', fontsize=12)\n",
     "plt.title('Unemployment', fontsize=14)\n",
     "plt.suptitle('With kappa recruiting cost in [0.61, 1.23]')"
@@ -399,13 +387,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bb14125",
+   "cell_type": "markdown",
+   "id": "dcc6da49",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "theta = v_q/u_q"
+    "# FIGURE 9A\n",
+    "### inverse-optimum Beveridge elasticity"
    ]
   },
   {
@@ -415,6 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "theta = v_q/u_q\n",
     "e_star = bug.compute_beveridge_inverse(theta)"
    ]
   },
@@ -425,25 +413,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = e_star.plot(color='darkred', linewidth=2, figsize=(9, 6), label='Inverse Optimum')\n",
+    "ax = e_star.plot(color='darkred', linewidth=2, figsize=(10, 7), label='Inverse Optimum')\n",
     "bev_e['E'].plot(ax=ax,color='blueviolet', linewidth=2,label='Bev Elasticity')\n",
     "bev_e['UB'].plot(ax=ax,color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "bev_e['LB'].plot(ax=ax,color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "plt.fill_between(bev_e['UB'].index, bev_e['LB'], bev_e['UB'], color='blueviolet', alpha=.3)\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
     "\n",
-    "ax.grid(axis='x')\n",
-    "\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Beveridge elasticity', fontsize=12)\n",
     "plt.title('Beveridge elasticity 95% CI', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af9db08",
+   "metadata": {},
+   "source": [
+    "# FIGURE 9B\n",
+    "### inverse-optimum zeta value of non-work"
    ]
   },
   {
@@ -463,26 +451,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = zeta_star.plot(color='darkred', linewidth=2, figsize=(9, 6), label='Inverse Optimum')\n",
+    "ax = zeta_star.plot(color='darkred', linewidth=2, figsize=(10, 7), label='Inverse Optimum')\n",
     "plt.axhline(zeta_range[0],color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "plt.axhline(zeta_range[1],color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "plt.axhline(zeta,color='blueviolet', linewidth=2, label='value non-work')\n",
     "\n",
     "plt.fill_between(zeta_star.index, zeta_range[0], zeta_range[1], color='blueviolet', alpha=.3)\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(-.5, 1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Zeta', fontsize=12)\n",
     "plt.title('Zeta value of Non-work', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "accb94a6",
+   "metadata": {},
+   "source": [
+    "# FIGURE 9C\n",
+    "### inverse-optimum kappa"
    ]
   },
   {
@@ -502,26 +491,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = kappa_star.plot(color='darkred', linewidth=2, figsize=(9, 6), label='Inverse Optimum')\n",
+    "ax = kappa_star.plot(color='darkred', linewidth=2, figsize=(10, 7), label='Inverse Optimum')\n",
     "plt.axhline(kappa_range[0],color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "plt.axhline(kappa_range[1],color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
     "plt.axhline(kappa,color='blueviolet', linewidth=2, label='Recruiting Cost')\n",
     "\n",
     "plt.fill_between(kappa_star.index, kappa_range[0], kappa_range[1], color='blueviolet', alpha=.3)\n",
     "\n",
-    "plt.legend(loc=2)\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
     "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(0, 6)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('kappa', fontsize=12)\n",
     "plt.title('Kappa Recruiting Cost', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02335957",
+   "metadata": {},
+   "source": [
+    "# FIGURE 10\n",
+    "### with zeta = 0.96"
    ]
   },
   {
@@ -554,17 +544,9 @@
     "ax = u_HM.plot(color='magenta', linewidth=2, figsize=(9, 6), label='Efficent')\n",
     "u_q.plot(color='navy', linewidth=2,  label='Actual')\n",
     "\n",
-    "plt.legend()\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
     "\n",
-    "ax.grid(axis='x')\n",
-    "plt.ylim(0,.3)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
+    "plt.ylim(0,.32)\n",
     "plt.ylabel('Unemployment', fontsize=12)\n",
     "plt.title('Unemployment', fontsize=14)\n",
     "plt.suptitle('With zeta = 0.96')"
@@ -575,7 +557,7 @@
    "id": "64d9a575",
    "metadata": {},
    "source": [
-    "## Appendix E\n",
+    "# Appendix E\n",
     "### Fluctuating social value of nonwork\n",
     "Read in data on labor productivity"
    ]
@@ -598,12 +580,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50bcb144",
+   "cell_type": "markdown",
+   "id": "4714ec54",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# FIGURE A8a\n",
+    "### Labor productivity in the United States, 1951–2019\n",
+    "#### run a high-pass filter"
+   ]
   },
   {
    "cell_type": "code",
@@ -625,19 +609,19 @@
     "ax = labor_p.plot(linewidth=3, figsize=(9, 6),)\n",
     "np.exp(trend).plot(linewidth=1.5, color='red')\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "        \n",
-    "plt.legend(loc=2)\n",
-    "ax.grid(axis='x')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
+    "\n",
     "plt.ylim(0,120)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Productivity Index', fontsize=12)\n",
     "plt.title('Productivity', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d18b9f7",
+   "metadata": {},
+   "source": [
+    "# FIGURE A8b"
    ]
   },
   {
@@ -649,19 +633,20 @@
    "source": [
     "ax = np.exp(cycle).plot(linewidth=2, color='purple',figsize=(9, 6),)\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
     "        \n",
-    "\n",
-    "ax.grid(axis='x')\n",
     "plt.ylim(.94,1.06)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Detrended Productivity Index', fontsize=12)\n",
     "plt.title('Detrended Productivity', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f5ab2b5",
+   "metadata": {},
+   "source": [
+    "# FIGURE A9\n",
+    "### US efficient unemployment rate with fluctuating social value of nonwork"
    ]
   },
   {
@@ -691,33 +676,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = u_const.plot(linewidth=2, color='magenta',figsize=(9, 6),label='Const social value')\n",
+    "ax = u_const.plot(linewidth=1.5, color='magenta',figsize=(9, 6),label='Const social value')\n",
     "u_fluct.plot(color='darkblue', linewidth=3, linestyle='dotted', label='Fluct social value')\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
-    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.4,zorder=-100)\n",
-    "        \n",
-    "plt.legend()\n",
-    "ax.grid(axis='x')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "\n",
     "plt.ylim(0,.06)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
     "plt.ylabel('Unemployment', fontsize=12)\n",
     "plt.title('Unemployment', fontsize=14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29d5ed83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(u_const, u_fluct)\n",
-    "plt.title(\"Const vs Fluct value of nonwork\")"
    ]
   },
   {
